Allow run bookkeeper-server tests with jdk11 using maven ---
Master Issue: #2872

*Motivation*

Allow run bookkeeper-server tests with jdk11 using maven

*Modifications*

Add options `java.base/jdk.internal.loader=ALL-UNNAMED`